# heka

./: .env.example  .gitignore  README.md  TESTING.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
docs/: ARCHITECTURE.md  PRODUCT_DIRECTION.md
scripts/: build-tauri.cmd
services/ai-gateway/: README.md  package-lock.json  package.json  wrangler.jsonc
services/ai-gateway/src/: index.ts
services/heka-web/: README.md  package-lock.json  package.json  wrangler.jsonc
services/heka-web/src/: agent.ts  askCache.ts  connectors.ts  demoFixtures.ts  geo.ts  index.ts  osm.ts  scorer.ts  tools.ts  types.ts  webSearch.ts
src/: App.tsx  main.tsx  planner.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/analysis/: geoMath.ts  localOpenDataSkill.ts  questionIntent.ts
src/application/: ports.ts
src/assets/: hekaLogo.ts
src/config/: aiGateway.ts
src/datasets/: datasetCatalog.ts  datasetResolver.ts
src/domain/: spatial.ts
src/earth/: askEarth.ts
src/execution/: pyqgisExecution.ts
src/gis/: importSpatialFile.ts
src/infrastructure/: rulePlanner.ts
src/layout/: AppMenu.tsx  DemoBanner.tsx  WorkspaceLayout.tsx
src/pages/: DownloadPage.tsx
src/panels/globe/: GlobePanel.tsx  mapViewer.css
src/panels/inspector/: ReasoningInspectorPanel.tsx
src/planner/: omniRoutePlanner.ts  planTransforms.ts  plannerPrompt.ts  plannerSchema.ts
src/stores/: useWorkspaceStore.ts
src/types/: workspace.ts
worker/: heka_worker.py
(+8 files in other folders)
